--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@
 
 title: Podcast Alarm
 email: "jonathan@podcastalarm.app"
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Alarm clock app that plays podcast episodes whenever you want.
   You can even wake up to the latest episode each day.
   Full featured podcast player too, no need to have more than one app.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.podcastalarm.app" # the base hostname & protocol for your site, e.g. http://example.com
+url: "www.podcastalarm.app"
 twitter_username: podcastalarm
 github_username: jonathanwilson1
 
@@ -36,28 +36,7 @@ plugins:
   - jekyll-gzip
   - jekyll-compress-images
   - jekyll-press
-  
+  - jekyll-sitemap
+
 sass:
   style: compressed
-
-
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
