Remove all refrence to POdcast

--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Podcast Alarm
-email: "jonathan@podcastalarm.app"
+title: RestaurantTechGuide
+email: ""
 description: >-
-  Alarm clock app that plays podcast episodes whenever you want.
-  You can even wake up to the latest episode each day.
-  Full featured podcast player too, no need to have more than one app.
+  Finding the latest technology trends in the restaurant industry. Tips, tricks,
+  recommendations and guides to using technology to make your restaurant excel.
 baseurl: "" # the subpath of your site, e.g. /blog
-twitter_username: podcastalarm
+twitter_username: RestaurantTechGuide
 github_username: jonathanwilson1
 
 # Build settings
